gcc/testsuite/gm2/pim/fail/forward.mod
MODULE forward ;


PROCEDURE foo (a: CARDINAL) ; FORWARD ;

PROCEDURE foo (a: CARDINAL) ;
BEGIN

END foo ;


BEGIN
   foo (1)
END forward.
